// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button isWaiting state matches snapshot 1`] = `
<button
  className="sc-bczRLJ gwwGEf"
  color="orange"
  disabled={true}
>
  Submitting...
</button>
`;

exports[`Button matches light color snapshot 1`] = `
<button
  className="sc-bczRLJ hgOqij"
  color="light"
>
  Click Me
</button>
`;

exports[`Button matches snapshot 1`] = `
<button
  className="sc-bczRLJ gwwGEf"
  color="orange"
>
  Click Me
</button>
`;
